@@ -3,9 +3,9 @@
     Part of SWI-Prolog
 
     Author:        Jan Wielemaker
-    E-mail:        jan@swi.psy.uva.nl
+    E-mail:        wielemak@science.uva.nl
     WWW:           http://www.swi-prolog.org
-    Copyright (C): 1985-2002, University of Amsterdam
+    Copyright (C): 1985-2005, University of Amsterdam
 
     This program is free software; you can redistribute it and/or
     modify it under the terms of the GNU General Public License
@@ -437,6 +437,9 @@ url(file, [path(Path)]) -->
 	).
 
 url(http, Attributes) --> !,
+	"//",
+	implicit_http(Attributes).
+url(https, Attributes) --> !,
 	"//",
 	implicit_http(Attributes).
 
